Add migration; Create Villa Table

--- a/Main/appsettings.json
+++ b/Main/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultSQLConnection": ""
+    "DefaultSQLConnection": "Data Source=;Initial Catalog=Villa;TrustServerCertificate=True;Trusted_Connection=True;MultipleActiveResultSets=true;Integrated Security=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False;"
   }
 }
