Add Controller to Call Villa API

--- a/Web/Web.csproj
+++ b/Web/Web.csproj
@@ -9,7 +9,9 @@
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="12.0.0" />
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.0" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="7.0.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+    <PackageReference Include="SGLab.Library.DependencyInjection" Version="6.0.1" />
   </ItemGroup>
 
 </Project>
